# Zygisk-Rust-ModuleTemplate

./: .gitignore  Cargo.toml  README.md  build.py
src/: lib.rs  macros.rs  module.rs
